src/modules/blocks/event-links/style.pcss
.tribe-editor__btn--link {
	align-items: center;
	background-color: transparent;
	border: 1px solid #E1E3E6;
	display: inline-flex;
	justify-content: center;
	margin-right: 15px;
	min-height: 38px;
	padding: 0 17px 0 14px;

	h5 {
		color: #009FD4;
		font-family: 'Helvetica', 'sans-serif';
		font-weight: normal;
		font-size: 1rem;

		& * [data-mce-selected="inline-boundary"] {
			background: transparent;
		}
	}

	input {
		border: none;
	}

	svg {
		margin-right: 7px;
	}
}

.tribe-editor__btn--placeholder {
	border: 2px dashed #E1E3E6;
	color: #8D949B;

	path {
		fill: #8D949B;
	}
}

